ash-website/src/components/LandingPage.css
.nav-bar {
  padding: 20px;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}

.header-item {
  padding: 8px 16px;
  border-radius: 7px;
}

.moonclouds-container {
  border-color: aliceblue;
  border-style: solid;
  display: flex;
  justify-content: flex-start;
  width: 100%;
}

.moonclouds-image {
  width: 160px;
  /*hover effects*/
  transition: transform 0.15s;
}

/*hover effects*/
.moonclouds-image:hover {
  transform: scale(1.25);
}

.header-item:hover {
  background-color: #2b1f46;
}

.name-image-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  height: auto;
  width: 100%;
  margin-top: 100px;
  margin-bottom: 100px;
}

.name-image {
  display: flex;
  align-items: center;
  max-height: 300px;
  max-width: 100%;
  animation: transitionIn 2s;
}

.landing-contact-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.my-work-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 120px;
}

.my-work-text {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100%;
  font-size: 3rem;
}

.hackhealth-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
  height: 100%;
  width: 100%;
}

.hackhealth-project-desc-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 60px;
  height: 100%;
  width: 100%;
}

.hackhealth-project-title {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  width: 100%;
}

.hackhealth-image {
  border-radius: 10px;
  height: 100%;
  width: 500px;
  padding: 60px;
  /*hover effects*/
  transition: 0.15s;
}

/*hover effects*/
.hackhealth-image:hover {
  transform: scale(1.15);
  z-index: 2;
}

.hackhealth-project-desc {
  font-size: 1.5rem;
  height: 100%;
  width: 100%;
}


.hackhealth-project-link {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 1.15rem;
  height: 100%;
  width: 100%;
}

.nudge-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-top: 100px;
  width: 100%;
}

.nudge-project-desc-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 60px;
  height: 100%;
  width: 100%;
}

.nudge-image {
  justify-content: center;
  height: 100%;
  width: 500px;
  padding: 60px;
  /*hover effects*/
  transition: 0.15s;
}

/*hover effects*/
.nudge-image:hover {
  transform: scale(1.15);
  z-index: 2;
}

.nudge-project-title {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  width: 100%;
}

.nudge-project-desc {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.5rem;
  width: 100%;
}

.toolbox-section-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 100px;
  height: 100%;
  width: 100%;
}

.toolbox-text {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100%;
  font-size: 3rem;
}

.toolbox {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-top: 25px;
  height: 100%;
  width: 100%;
}

.toolbox-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-left: 20px;
  margin-right: 20px;
  height: 100%;
  width: 50px;
  /*hover effects*/
  transition: 0.15s;
}

/*hover effects*/
.toolbox-item:hover {
  transform: scale(1.5);
  z-index: 2;
}

.playwright-logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-left: 15px;
  margin-right: 15px;
  height: 100%;
  width: 100px;
  /*hover effects*/
  transition: 0.15s;
}

/*hover effects*/
.playwright-logo:hover {
  transform: scale(1.5);
  z-index: 2;
}

.rest-logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-left: 15px;
  margin-right: 15px;
  height: 100%;
  width: 80px;
  /*hover effects*/
  transition: 0.15s;
}

/*hover effects*/
.rest-logo:hover {
  transform: scale(1.5);
  z-index: 2;
}

.nextjs-logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-left: 15px;
  margin-right: 15px;
  height: 100%;
  width: 110px;
  /*hover effects*/
  transition: 0.15s;
}

/*hover effects*/
.nextjs-logo:hover {
  transform: scale(1.5);
  z-index: 2;
}

.about-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 100px;
}

.about-text {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100%;
  font-size: 3rem;
}

.about-desc {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-left: 200px;
  margin-right: 200px;
  font-size: 1.5rem;
}

.about-desc-1,
.about-desc-2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 50px;
}

.contact-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  margin-top: 100px;
}

.contact-text {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100%;
  font-size: 3rem;
}

.contact-desc {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-left: 100px;
  margin-right: 100px;
  font-size: 1.5rem;
}

.contact-email {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  margin-top: 50px;
  margin-left: 100px;
  margin-right: 100px;
  font-size: 1.15rem;
}

.contact-section-logos {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-top: 35px;
  height: 100%;
  width: 100%;
}

.github-logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  width: 45px;
  margin-right: 20px;
  /*hover effects*/
  transition: 0.15s;
}

/*hover effects*/
.github-logo:hover {
  transform: scale(1.5);
  z-index: 2;
}

.linkedin-logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  width: 45px;
  /*hover effects*/
  transition: 0.15s;
}

/*hover effects*/
.linkedin-logo:hover {
  transform: scale(1.5);
  z-index: 2;
}


.pixelstar-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
  height: 100%;
  width: 100%;
}

.pixelstar {
  height: 100%;
  width: 45px;
  /*hover effects*/
  transition: 0.15s;
}

/*hover effects*/
.pixelstar:hover {
  transform: scale(1.25);
  z-index: 2;
}

.arrow-image {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 65px;
  margin-right: 10px;
}

.footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 80px;
}

.footer-image {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

